@@ -1,5 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(write.snps,matrix)
+S3method(write.snps,vcfR)
 export(cbind_SNPs)
 export(convert_phases)
 export(convert_plink)
@@ -19,4 +21,5 @@ export(rbind_SNPs)
 export(read.snps)
 export(rowconcatenate)
 export(write.snps)
+import(vcfR)
 useDynLib(Siccuracy)
