@@ -1,0 +1,8 @@
+library(testthat)
+library(Siccuracy)
+
+context('vcf files/objects')
+
+test_that('write.snps works on vcf objects', {
+  
+})
